--- a/app/src/main/res/layout/fragment_cities_list.xml
+++ b/app/src/main/res/layout/fragment_cities_list.xml
@@ -14,19 +14,23 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/main_toolbar"
             app:menu="@menu/menu_list_cities"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="@string/app_name" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_city_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
             tools:listitem="@layout/item_city" />
 
 
