add usecase and work with database a bit

--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="cityWeather"
-            type="com.justnik.weatherapp2.domain.CityWeather" />
+            type="com.justnik.weatherapp2.domain.entities.CityWeather" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
