--- a/app/src/main/res/layout/fragment_city_forecast.xml
+++ b/app/src/main/res/layout/fragment_city_forecast.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -8,7 +7,7 @@
 
         <variable
             name="cityWeather"
-            type="com.justnik.weatherapp2.domain.CityWeather" />
+            type="com.justnik.weatherapp2.domain.entities.CityWeather" />
     </data>
 
     <LinearLayout
@@ -41,68 +40,68 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar_forecast_city">
-            
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
 
-            <TextView
-                android:id="@+id/tv_current_temp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{cityWeather.currentTemp}"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_current_weather"
-                app:layout_constraintEnd_toStartOf="@+id/iv_current_weather"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/iv_current_weather"
-                tools:text="+20°C" />
+                <TextView
+                    android:id="@+id/tv_current_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{cityWeather.currentTemp}"
+                    android:textSize="40sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_current_weather"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_current_weather"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/iv_current_weather"
+                    tools:text="+20°C" />
 
                 <ImageView
                     android:id="@+id/iv_current_weather"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_current_temp"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@drawable/ic_weather_example" />
 
                 <TextView
-                android:id="@+id/tv_current_weather_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{cityWeather.currentWeatherDescription}"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_current_weather"
-                tools:text="Sunny" />
+                    android:id="@+id/tv_current_weather_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{cityWeather.currentWeatherDescription}"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_current_weather"
+                    tools:text="Sunny" />
 
-            <View
-                android:id="@+id/separator"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_current_weather_description" />
+                <View
+                    android:id="@+id/separator"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_current_weather_description" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_daily_forecast"
-                android:layout_width="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/separator"
-                tools:listitem="@layout/item_daily_forecast" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_daily_forecast"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/separator"
+                    tools:listitem="@layout/item_daily_forecast" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
